fixed layout issues and changed disqus url

--- a/react-front/src/components/organisms/Content/Content.sass
+++ b/react-front/src/components/organisms/Content/Content.sass
@@ -5,7 +5,7 @@
     width: 72%
 
   .content__right
-    left: 20%
+    width: 20%
 
 @media ( max-width: 768px )
   .content__left
